2023-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c Revert
	* coders/mat.c Prevent against geometry injection.

2023-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ExtractPostscript): Restore previous
	implementation.

2023-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Fix memory leak of existing
	allocations if realloc() fails.

	* magick/memory.c (MagickReallocStd): Added function to expose
	standard realloc() functionality to allow cleanup of original
	object.

	* magick/list.c (AppendImageToList): Added image could itself be a
	list, so seek again for the end of the list.
	(GetImageListLength): Count value should be unsigned long.

	* coders/wpg.c (ReadWPGImage): Reset image rows and columns to
	zero.
	(ExtractPostscript): Pass original image pointer storage.

	* coders/fits.c (ReadFITSImage): Reset image rows and columns to
	zero.

	* coders/bmp.c (ExtractNestedBlob): Reset image rows and columns
	to zero.

	* PerlMagick/t/subroutines.pl (testRead): Remove request for size
	512x512.

	* PerlMagick/t/read.t: Fix checksums for FITS tests.

	* PerlMagick/t/png/read.t: Fix checksum for PNG in BMP format.

	* PerlMagick/Makefile.am (perl-check): Enable verbose PerlMagick
	tests using TEST_VERBOSE=1.

2023-11-05  Fojtik Jaroslav  <JaFojtik@yandex.com>

	PerlMagick/t/input1_PS.wpg PerlMagick/t/input2_PS.wpg Add 2
	samples of WPG that really contain embedded EPS.

2023-11-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (ExtractNestedBlob): Always need to remove image
	which is being replaced.

2023-10-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	coders/wpg.c Do not touch to image structure from palette reader.
	"RecordLength" is a 32bit variable, it should not be long that expands
	to 64bits.

2023-10-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (CommandAccessMonitor): Add "Access Request: "