@@ -37,6 +37,17 @@
 </div>
 
 <div class="document">
+<p>2023-11-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>magick/colorspace.c (RGBTransformImage): Move cast in
+primary_info.x and primary_info.y calcuation.  Addresses concern
+expressed in SourceForge issue #730 &quot;Recent colorspace conversion
+change&quot;.</p></li>
+<li><p>coders/wpg.c Revert</p></li>
+<li><p>coders/mat.c Prevent against geometry injection.</p></li>
+</ul>
+</blockquote>
 <p>2023-11-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
